Update template to match with dharmendra poudel

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <!-- Theme CSS Link -->
     <link rel="stylesheet" href="dist/css/main.css">
 
-    <title>BD Weather Coming Soon Responsive HTML Template</title>
+    <title>Dharmendra Poudel</title>
+    <link rel="icon" type="image/x-icon" href="dist/src/images/favicon.ico">
 </head>
 
 <body>
@@ -22,32 +23,19 @@
             <nav>
                 <div class="logo">
                     <a href="index.html">                       
-                        <svg xmlns="http://www.w3.org/2000/svg" width="224.771" height="43.502" viewBox="0 0 224.771 43.502">
-                            <g id="Group_15" data-name="Group 15" transform="translate(-153.231 -131.248)">
-                             <text id="BD.Weather" transform="translate(209.002 163)" fill="#001141" font-size="28" font-family="Poppins-SemiBold, Poppins" font-weight="600"><tspan x="0" y="0">BD.Weather</tspan></text>
-                            <g id="Icon_feather-cloud-drizzle" data-name="Icon feather-cloud-drizzle" transform="translate(153.509 131.5)">
-                            <path id="Path_1" data-name="Path 1" d="M12,28.5v3.636" transform="translate(2.229 5.727)" fill="none" stroke="#ff3251" stroke-linecap="round" stroke-linejoin="round" stroke-width="3.5"/>
-                            <path id="Path_2" data-name="Path 2" d="M12,19.5v3.636" transform="translate(2.229 3.818)" fill="none" stroke="#ff3251" stroke-linecap="round" stroke-linejoin="round" stroke-width="3.5"/>
-                            <path id="Path_3" data-name="Path 3" d="M24,28.5v3.636" transform="translate(4.775 5.727)" fill="none" stroke="#ff3251" stroke-linecap="round" stroke-linejoin="round" stroke-width="3.5"/>
-                            <path id="Path_4" data-name="Path 4" d="M24,19.5v3.636" transform="translate(4.775 3.818)" fill="none" stroke="#ff3251" stroke-linecap="round" stroke-linejoin="round" stroke-width="3.5"/>
-                            <path id="Path_5" data-name="Path 5" d="M18,31.5v3.636" transform="translate(3.502 6.364)" fill="none" stroke="#ff3251" stroke-linecap="round" stroke-linejoin="round" stroke-width="3.5"/>
-                            <path id="Path_6" data-name="Path 6" d="M18,22.5v3.636" transform="translate(3.502 4.455)" fill="none" stroke="#ff3251" stroke-linecap="round" stroke-linejoin="round" stroke-width="3.5"/>
-                            <path id="Path_7" data-name="Path 7" d="M36.048,29.827a9.091,9.091,0,0,0-3.636-17.418H30.12a14.546,14.546,0,1,0-23.164,15" transform="translate(0 0)" fill="none" stroke="#ff3251" stroke-linecap="round" stroke-linejoin="round" stroke-width="3.5"/>
-                            </g>
-                            </g>
-                        </svg>
+                        <img src="dist/src/images/logo.png" alt="logo" height="43.502" style="border-radius: 8px;">
                     </a>
                 </div>
                 <div class="social-icon">
                     <ul class="list-inline mb-0 d-flex align-items-center">
                         <li class="list-inline-item">
-                            <a href="#">
+                            <a href="https://facebook.com/ghanshyam.podel">
                                 <svg width="9" height="18" viewBox="0 0 9 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M7.3575 2.98875H9.00075V0.12675C8.71725 0.08775 7.74225 0 6.60675 0C4.2375 0 2.6145 1.49025 2.6145 4.22925V6.75H0V9.9495H2.6145V18H5.82V9.95025H8.32875L8.727 6.75075H5.81925V4.5465C5.82 3.62175 6.069 2.98875 7.3575 2.98875Z" fill="currentColor"></path>
                                 </svg>
                             </a>
                         </li>
-                        <li class="list-inline-item">
+                        <!-- <li class="list-inline-item">
                             <a href="#">
                                 <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M18 1.73137C17.3306 2.025 16.6174 2.21962 15.8737 2.31412C16.6388 1.85737 17.2226 1.13962 17.4971 0.2745C16.7839 0.69975 15.9964 1.00013 15.1571 1.16775C14.4799 0.446625 13.5146 0 12.4616 0C10.4186 0 8.77387 1.65825 8.77387 3.69113C8.77387 3.98363 8.79862 4.26487 8.85938 4.53262C5.7915 4.383 3.07687 2.91263 1.25325 0.67275C0.934875 1.22513 0.748125 1.85738 0.748125 2.538C0.748125 3.816 1.40625 4.94887 2.38725 5.60475C1.79437 5.5935 1.21275 5.42138 0.72 5.15025C0.72 5.1615 0.72 5.17613 0.72 5.19075C0.72 6.984 1.99912 8.4735 3.6765 8.81662C3.37612 8.89875 3.04875 8.93812 2.709 8.93812C2.47275 8.93812 2.23425 8.92463 2.01038 8.87512C2.4885 10.3365 3.84525 11.4109 5.4585 11.4457C4.203 12.4279 2.60888 13.0196 0.883125 13.0196C0.5805 13.0196 0.29025 13.0061 0 12.969C1.63462 14.0231 3.57188 14.625 5.661 14.625C12.4515 14.625 16.164 9 16.164 4.12425C16.164 3.96112 16.1584 3.80363 16.1505 3.64725C16.8829 3.1275 17.4982 2.47837 18 1.73137Z" fill="currentColor"></path>
@@ -62,7 +50,7 @@
                                     <path d="M14.8876 4.19521C14.8876 4.79133 14.4043 5.27469 13.808 5.27469C13.2119 5.27469 12.7285 4.79133 12.7285 4.19521C12.7285 3.59894 13.2119 3.11572 13.808 3.11572C14.4043 3.11572 14.8876 3.59894 14.8876 4.19521Z" fill="currentColor"></path>
                                 </svg>
                             </a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </nav>
@@ -74,14 +62,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8">
-                        <h5 class="has-line">Coming Soon</h5>
-                        <h1>Get Notified when we launch.</h1>
-                        <form action="#">
+                        <h5 class="has-line">My new website is launching soon</h5>
+                        <h1>I am Dharmendra Poudel.</h1>
+                        <!-- <form action="#">
                             <div class="form-group">
                                 <input type="email" placeholder="Enter your email">
                                 <button type="submit">Notify Me</button>
                             </div>
-                        </form>
+                        </form> -->
                     </div>
                 </div>
             </div>
