--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <h5 class="has-line">My new website is launching soon</h5>
-                        <h1>I am Dharmendra Poudel.</h1>
+                        <h1>I am Dharmendra Krishna Poudel.</h1>
                         <!-- <form action="#">
                             <div class="form-group">
                                 <input type="email" placeholder="Enter your email">
