--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="social-icon">
                     <ul class="list-inline mb-0 d-flex align-items-center">
                         <li class="list-inline-item">
-                            <a href="https://facebook.com/ghanshyam.podel">
+                            <a href="https://www.facebook.com/dharmendra.paudel.5">
                                 <svg width="9" height="18" viewBox="0 0 9 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M7.3575 2.98875H9.00075V0.12675C8.71725 0.08775 7.74225 0 6.60675 0C4.2375 0 2.6145 1.49025 2.6145 4.22925V6.75H0V9.9495H2.6145V18H5.82V9.95025H8.32875L8.727 6.75075H5.81925V4.5465C5.82 3.62175 6.069 2.98875 7.3575 2.98875Z" fill="currentColor"></path>
                                 </svg>
