Add meta tags description and opg

--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
     <!-- Theme CSS Link -->
     <link rel="stylesheet" href="dist/css/main.css">
 
-    <title>Dharmendra Poudel</title>
+    <title>Astrology with Dharmendra Krishna Poudel - Unlock Your Future</title>
     <link rel="icon" type="image/x-icon" href="dist/src/images/favicon.ico">
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Discover your destiny with personalized astrology consultations by Dharmendra Krishna Poudel. Connect on WhatsApp, Viber, or Facebook for insights into love, career, health, and more.">
+    <meta name="author" content="Dharmendra Krishna Poudel">
+    <meta name="developer" content="Madhav Paudel">
+    <meta property="og:title" content="Astrology with Dharmendra Krishna Poudel - Unlock Your Future">
+    <meta property="og:description" content="Discover your destiny with personalized astrology consultations by Dharmendra Krishna Poudel. Connect on WhatsApp, Viber, or Facebook for insights into love, career, health, and more.">
+    <meta property="og:image" content="https://dharmendrapoudel.com.np/dist/src/images/ogp.jpg">
+    <meta property="og:type" content="website">
 </head>
 
 <body>
