--- a/404.html
+++ b/404.html
@@ -12,15 +12,11 @@
     <!-- Theme CSS Link -->
     <link rel="stylesheet" href="dist/css/main.css">
 
-    <title>Astrology with Dharmendra Krishna Poudel - Unlock Your Future</title>
+    <title>404 Not Found</title>
     <link rel="icon" type="image/x-icon" href="dist/src/images/favicon.ico">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Discover your destiny with personalized astrology consultations by Dharmendra Krishna Poudel. Connect on WhatsApp, Viber, or Facebook for insights into love, career, health, and more.">
-    <meta name="author" content="Dharmendra Krishna Poudel">
     <meta name="developer" content="Madhav Paudel">
-    <meta property="og:title" content="Astrology with Dharmendra Krishna Poudel - Unlock Your Future">
-    <meta property="og:description" content="Discover your destiny with personalized astrology consultations by Dharmendra Krishna Poudel. Connect on WhatsApp, Viber, or Facebook for insights into love, career, health, and more.">
     <meta property="og:image" content="https://dharmendrapoudel.com.np/dist/src/images/ogp.jpg">
     <meta property="og:type" content="website">
 </head>
@@ -91,8 +87,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8">
-                        <h5 class="has-line">My new website is launching soon</h5>
-                        <h1>I am Dharmendra Krishna Poudel.</h1>
+                        <h5 class="has-line">The page you are looking for doesnot exist.</h5>
+                        <h1>404 Not Found</h1>
                         <!-- <form action="#">
                             <div class="form-group">
                                 <input type="email" placeholder="Enter your email">
