Twitter card added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <meta property="og:description" content="Discover your destiny with personalized astrology consultations by Dharmendra Krishna Poudel. Connect on WhatsApp, Viber, or Facebook for insights into love, career, health, and more.">
     <meta property="og:image" content="https://dharmendrapoudel.com.np/dist/src/images/ogp.jpg">
     <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Astrology with Dharmendra Krishna Poudel - Unlock Your Future">
+    <meta name="twitter:description" content="Discover your destiny with personalized astrology consultations by Dharmendra Krishna Poudel. Connect on WhatsApp, Viber, or Facebook for insights into love, career, health, and more.">
+    <meta name="twitter:image" content="https://dharmendrapoudel.com.np/dist/src/images/ogp.jpg">
 </head>
 
 <body>
