Pinterest rich pin added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
     <meta name="twitter:title" content="Astrology with Dharmendra Krishna Poudel - Unlock Your Future">
     <meta name="twitter:description" content="Discover your destiny with personalized astrology consultations by Dharmendra Krishna Poudel. Connect on WhatsApp, Viber, or Facebook for insights into love, career, health, and more.">
     <meta name="twitter:image" content="https://dharmendrapoudel.com.np/dist/src/images/ogp.jpg">
+
+    <!-- Pinterest Rich Pin Meta -->
+    <meta property="og:site_name" content="Dharmendra Krishna Poudel Astrology">
+    <meta property="og:url" content="https://dharmendrapoudel.com.np">
+    <meta name="pinterest-rich-pin" content="true">
 </head>
 
 <body>
