Fix og site name

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta name="twitter:image" content="https://dharmendrapoudel.com.np/dist/src/images/ogp.jpg">
 
     <!-- Pinterest Rich Pin Meta -->
-    <meta property="og:site_name" content="Dharmendra Krishna Poudel Astrology">
+    <meta property="og:site_name" content="Astrology with Dharmendra Krishna Poudel">
     <meta property="og:url" content="https://dharmendrapoudel.com.np">
     <meta name="pinterest-rich-pin" content="true">
 </head>
